# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [4.0.2] - 2022-05-24

### Changed

- Os comandos da Menhera voltaram a ser em português. Desculpem a incoveniência
- O texto do mamar voltou como era antes ehe

### Fixed

- Jogos do bicho eram adicionados nas estatísticas da roleta
- Inconsistências no ping do `/menhera estatísticas`
- Problemas com permissões no comando `/configurar`

## [4.0.1] - 2022-05-17

### Added

- Agora é possivel renomear cores no `/personalizar cores`. Também é possivel settar o emoji da cor entre 10 emojis predefinidos colocando a letra do emoji no nome da cor. A lista é: 0 🇧🇷, 1 💜, 2 🔴, 3 🔵, 4 🟢, 5 💗, 6 🟡, 7 ⚫, 8 🟤, 9 ⚪. O nome deve ter somente 1 destes números.
- **TRADUÇÕES:** Todos os comandos da Menhera são traduzidos para inglês (os nomes e descrições nos slash commands).
- O comando TOP foi reescrito! Adicionados novos tipos de top: `estatísticas!`. Veja os melhores jogadores dos jogos de todos os tempos com o novo `/top`
- Novo Comando de Estatísticas! `/status bicho` - Mostra as estatísticas do jogo do bicho de alguém
- Desgigners agora recebem uma DM da Menhera quando um design de sua autoria é comprado. Isso pode ser desativado no comando `/status designer`
- Quatro novos designs do Relkhin (853341889016365097). Perfis `iD03` e `Um Propósito Sem Alma`, fundo de carta `Lamenta Caelorum` e Mesa de Cartas `Partida Atemporal`.
- Status de Roleta `/status roleta`
- **Sistema de PvP:** Usuários podem batalhar em uma batalha justa, ou desnivelada, depende do invocador do comando. Batalhas justas são alinhadas com TODOS os jogadores nível **20**, com todas habilidades da classe desbloqueadas no nível 2. NOVOS COMANDOS: